static/css/westgate.css
body,
html {
    width: 100%;
    height: 100%;
}

body,
h1,
h2,
h3,
h4,
h5,
h6 {
    font-family: "Lato","Helvetica Neue",Helvetica,Arial,sans-serif;
    font-weight: 700;
}

.lead {
    font-size: 18px;
    font-weight: 400;
}

.intro-header {
    padding-top: 50px; /* If you're making other pages, make sure there is 50px of padding to make sure the navbar doesn't overlap content! */
    padding-bottom: 50px;
    text-align: center;
    color: #f8f8f8;
    background: url(../img/LeedsSkyline.jpg) no-repeat center center;
    background-size: cover;
}

.intro-message {
    position: relative;
    padding-top: 10%;
    padding-bottom: 10%;
}

.intro-message > h1 {
    margin: 0;
    font-size: 5em;
}

.intro-divider {
    width: 400px;
    border-top: 1px solid #f8f8f8;
    border-bottom: 1px solid rgba(0,0,0,0.2);
}

.intro-message > h1,
.intro-message > h3,
.intro-message > p {
    text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
}

@media(max-width:767px) {
    .intro-message {
        padding-bottom: 15%;
    }

    .intro-message > h1 {
        font-size: 3em;
    }

    ul.intro-social-buttons > li {
        display: block;
        margin-bottom: 20px;
        padding: 0;
    }

    ul.intro-social-buttons > li:last-child {
        margin-bottom: 0;
    }

    .intro-divider {
        width: 100%;
    }
}

.network-name {
    text-transform: uppercase;
    font-size: 14px;
    font-weight: 400;
    letter-spacing: 2px;
}

.content-section-a {
    padding: 50px 0;
    background-color: #f8f8f8;
}

.content-section-b {
    padding: 50px 0;
    border-top: 1px solid #e7e7e7;
    border-bottom: 1px solid #e7e7e7;
}

.section-heading {
    margin-bottom: 30px;
}

.section-heading-spacer {
    float: left;
    width: 200px;
    border-top: 3px solid #e7e7e7;
}

.banner {
    padding: 100px 0;
    color: #f8f8f8;
    background: url(../img/banner-bg.jpg) no-repeat center center;
    background-size: cover;
}

.banner h2 {
    margin: 0;
    text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
    font-size: 3em;
}

.banner ul {
    margin-bottom: 0;
}

.banner-social-buttons {
    float: right;
    margin-top: 0;
}

@media(max-width:1199px) {
    ul.banner-social-buttons {
        float: left;
        margin-top: 15px;
    }
}

@media(max-width:767px) {
    .banner h2 {
        margin: 0;
        text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
        font-size: 3em;
    }

    ul.banner-social-buttons > li {
        display: block;
        margin-bottom: 20px;
        padding: 0;
    }

    ul.banner-social-buttons > li:last-child {
        margin-bottom: 0;
    }
}

footer {
    padding: 50px 0;
    background-color: #f8f8f8;
}

p.copyright {
    margin: 15px 0 0;
}

/*
 *  Custom Styles
 */

.wg-logo {
    display:block;
    height:40px;
    margin: 0px 10px 20px 50px; 
}

li.dropdown a {
    padding: 15px 10px;
}

.topnav {
    font-size: 12px;
    color: #333333;
}

.marker_dialog
{
    width:380px;
    overflow: hidden;
}

.gm-style-iw1 div {
    overflow:hidden;
    height:1%;    
}

.marker_photo 
{
    width:192px;
    float:left;
    margin: 8px 12px 0 0;
}

.favorite_star
{
    width: 18px;
    float: right; 
    cursor: pointer;
}

.favorite_star.list
{
    margin: -34px 20px 5px 0px;
}

.favorite_star.pin
{
    margin: -28px 12px 5px 0px;
}

.favorite_star.detail
{
    margin: -1px 8px 5px 16px;
}

.favorite_star_header
{
    width: 18px;
    cursor: pointer;
    margin: 2px 8px 5px 16px;
}

.tab-content .panel {
    border-top:0;
    border-top-left-radius: 0;
    border-top-right-radius: 0;
}

.navbar-nav {
    margin-top: 7px;
}

.navbar-inverse {
    background-color: #000;
}

.navbar {
    min-height: 69px;
}

.navbar-inverse .navbar-nav > .active > a, .navbar-inverse .navbar-nav > .active > a:hover, .navbar-inverse .navbar-nav > .active > a:focus {
    background-color: #000;    
}

.dropdown .open {
    background-color: #000;       
}

.navbar-inverse .navbar-nav > .open > a,
.navbar-inverse .navbar-nav > .open > a:hover,
.navbar-inverse .navbar-nav > .open > a:focus {    
    background-color: #333;    
}

.nav > li > a.dropdown-toggle:hover {
    background-color: black;
}

.slider {
    width: 100%;
    margin: 0 auto;
}
.slick-slide {
    margin: 0;
}
.slick-slide img {
    width: 100%;
}

.slick-prev:before, .slick-next:before {
    color: black;
}

.wgpropertygallery-nav {
    margin-top: 10px;
}

.tab-pane .panel-body {
    padding: 12px;
}

.right {
    padding: 0 10px;
}

